blade/bookinfo/base/gedemo/default/gateway-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${BOOKINFO_URL},${ARGOCD_URL},${DEX_URL}
    meta.helm.sh/release-name: gloo
    meta.helm.sh/release-namespace: gloo-system
    prometheus.io/path: /metrics
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: TCP
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-name: jad-test-gateway-proxy
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: external
  name: gateway-proxy
  namespace: gloo-system
spec:
  type: LoadBalancer
