blade/bookinfo/base/gedemo/default/argocd-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argocd-ui-tls
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: argocd
      namespace: gloo-system
  virtualHost:
    domains:
    - ${ARGOCD_URL}
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-80
            namespace: gloo-system

---

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argocd-ui-http
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - ${ARGOCD_URL}
    routes:
    - matchers:
      - prefix: /
      redirectAction:
        hostRedirect: ${ARGOCD_URL}
        httpsRedirect: true

---

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argocd-grpc
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: argocd
      namespace: gloo-system
  virtualHost:
    domains:
    - ${ARGOCD_URL}:443
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: static-argocd-grpc
            namespace: gloo-system
