blade/bookinfo/base/gedemo/default/dex-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: dex
  namespace: gloo-system
spec:
  displayName: dex
  sslConfig:
    secretRef:
      name: dex
      namespace: gloo-system
    sniDomains:
    - ${DEX_URL}
  virtualHost:
    domains:
    - ${DEX_URL}
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: dex-dex-5556
            namespace: gloo-system
